--- a/Project.toml
+++ b/Project.toml
@@ -16,11 +16,20 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 ValueShapes = "136a8f8c-c49b-4edb-8b98-f3d64d48be8f"
 
 [compat]
-BAT = ">=2.0"
-julia = ">=1.3"
+BAT = "2"
+Distributions = "0.22, 0.23, 0.24"
+NamedTupleTools = "0.13"
+Parameters = "0.12"
+RecipesBase = "0.7, 0.8, 1.0"
+Requires = "0.5, 1"
+Setfield = "0.7"
+StatsBase = "0.32, 0.33"
+ValueShapes = "0.7"
+julia = "1.3"
 
 [extras]
+IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["IntervalSets", "Test"]
