--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,14 @@ jobs:
             arch: x86
           - version: nightly
             arch: x86
+          - version: nightly
+            os: macOS-latest
+          - version: nightly
+            os: windows-latest
+          - version: 1.3
+            os: macOS-latest
+          - version: 1.3
+            os: windows-latest
     steps:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@latest
