--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 ValueShapes = "136a8f8c-c49b-4edb-8b98-f3d64d48be8f"
 
 [compat]
-BAT = "2"
+BAT = "2, 3"
 Distributions = "0.22, 0.23, 0.24"
 NamedTupleTools = "0.13"
 Parameters = "0.12"
