--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.2"
 
 [deps]
 BAT = "c0cd4b16-88b7-57fa-983b-ab80aecada7e"
+DensityInterface = "b429d917-457f-4dbc-8f4c-0cc954292b1d"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
@@ -16,15 +17,15 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 ValueShapes = "136a8f8c-c49b-4edb-8b98-f3d64d48be8f"
 
 [compat]
-BAT = "2"
-Distributions = "0.22, 0.23, 0.24"
+BAT = "2, 3"
+Distributions = "0.22, 0.23, 0.24, 0.25"
 NamedTupleTools = "0.13"
 Parameters = "0.12"
 RecipesBase = "0.7, 0.8, 1.0"
 Requires = "0.5, 1"
 Setfield = "0.7"
 StatsBase = "0.32, 0.33"
-ValueShapes = "0.7, 0.8, 0.9"
+ValueShapes = "0.7, 0.8, 0.9, 0.10"
 julia = "1.3"
 
 [extras]
