--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,8 @@ jobs:
       - uses: julia-actions/setup-julia@latest
         with:
           version: '1'
+      - name: Install dependencies
+        run: julia --project=. -e 'using Pkg; pkg"add BAT#main"; Pkg.instantiate()'
       - name: Cache artifacts
         uses: actions/cache@v2
         env:
