--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ RobustAdaptiveMetropolisSampler = "2f96e190-b8a6-11e9-0b3d-5fbd22c21613"
 Setfield = "efcf1570-3423-57d1-acb7-fd33fddbac46"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 ValueShapes = "136a8f8c-c49b-4edb-8b98-f3d64d48be8f"
