--- a/Project.toml
+++ b/Project.toml
@@ -24,14 +24,21 @@ ValueShapes = "136a8f8c-c49b-4edb-8b98-f3d64d48be8f"
 
 [compat]
 BAT = "3"
+BenchmarkTools = "1.3"
+DensityInterface = "0.4"
 Distributions = "0.22, 0.23, 0.24, 0.25"
+LinearAlgebra = "1.9"
 NamedTupleTools = "0.13"
-Parameters = "0.12"
+Parameters = "0.12, 0.13"
+Random = "1.9"
 RecipesBase = "0.7, 0.8, 1.0"
 Requires = "0.5, 1"
 Setfield = "0.7"
-StatsBase = "0.32, 0.33"
-ValueShapes = "0.7, 0.8, 0.9, 0.10"
+SparseArrays = "1.9"
+SpecialFunctions = "2.3"
+StatsBase = "0.32, 0.33, 0.34"
+TypedTables = "1.4"
+ValueShapes = "0.9, 0.10"
 julia = "1.8, 1.9"
 
 [extras]
